components/llamastack/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: llamastack
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llamastack
  template:
    metadata:
      labels:
        app: llamastack
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: llamastack
          ports:
            - containerPort: 8321
              protocol: TCP
          imagePullPolicy: Always
          terminationMessagePolicy: File
          # image: 'docker.io/llamastack/distribution-starter:0.3.2'
          image: docker.io/llamastack/distribution-starter:0.2.24
          volumeMounts:
            - mountPath: /.llama/distributions
              name: distributions
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      volumes:
        - name: openai-token
          secret:
            secretName: openai-token
        - name: distributions
          emptydir: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
